--- a/app/views/retrieve_collections/new.html.erb
+++ b/app/views/retrieve_collections/new.html.erb
@@ -27,9 +27,9 @@
           </div>
         </div>
         <div class="form-group">
-          <label class="col-sm-3 control-label"><%= ara_t 'retrieve_collection.action_name' %> <span class="required">*</span></label>
+          <label class="col-sm-3 control-label"><%= ara_t 'retrieve_collection.action_code' %> <span class="required">*</span></label>
           <div class="col-sm-6">
-            <%= f.text_field :action_name, class: 'form-control' %>
+            <%= f.text_field :action_code, class: 'form-control' %>
           </div>
         </div>
       </div>
