--- a/app/views/enumeration_properties/new.html.erb
+++ b/app/views/enumeration_properties/new.html.erb
@@ -40,12 +40,6 @@
           </div>
         </div>
         <div class="form-group">
-          <label class="col-sm-3 control-label"><%= ara_t 'property.localized_name' %> <span class="required">*</span></label>
-          <div class="col-sm-6">
-            <%= f.text_field :localized_name, class: 'form-control' %>
-          </div>
-        </div>
-        <div class="form-group">
           <label class="col-sm-3 control-label"><%= ara_t 'property.sculpture' %> <span class="required">*</span></label>
           <div class="col-sm-6">
             <div class="app-radio inline round">
@@ -70,10 +64,7 @@
         <div class="form-group">
           <label class="col-sm-3 control-label">#<%= i + 1 %></label>
           <div class="col-sm-2">
-            <%= field.text_field :name, placeholder: ara_t('enumeration_element.code'), class: 'form-control' %>
-          </div>
-          <div class="col-sm-2">
-            <%= field.text_field :localized_name, placeholder: ara_t('enumeration_element.localized_name'), class: 'form-control' %>
+            <%= field.text_field :code, placeholder: ara_t('enumeration_element.code'), class: 'form-control' %>
           </div>
           <div class="col-sm-2">
             <%= field.text_field :name, placeholder: ara_t('enumeration_element.name'), class: 'form-control' %>
