--- a/app/views/individual_updations/show.html.erb
+++ b/app/views/individual_updations/show.html.erb
@@ -27,15 +27,15 @@
           </div>
         </div>
         <div class="form-group">
-          <label class="col-sm-3 control-label"><%= ara_t 'individual_updation.frontend_action_name' %></label>
+          <label class="col-sm-3 control-label"><%= ara_t 'individual_updation.frontend_action_code' %></label>
           <div class="col-sm-6">
-            <%= text_field_tag nil, @individual_updation.frontend_action_name, readonly: true, class: 'form-control' %>
+            <%= text_field_tag nil, @individual_updation.frontend_action_code, readonly: true, class: 'form-control' %>
           </div>
         </div>
         <div class="form-group">
-          <label class="col-sm-3 control-label"><%= ara_t 'individual_updation.backend_action_name' %></label>
+          <label class="col-sm-3 control-label"><%= ara_t 'individual_updation.backend_action_code' %></label>
           <div class="col-sm-6">
-            <%= text_field_tag nil, @individual_updation.backend_action_name, readonly: true, class: 'form-control' %>
+            <%= text_field_tag nil, @individual_updation.backend_action_code, readonly: true, class: 'form-control' %>
           </div>
         </div>
         <div class="form-group">
