--- a/app/views/models/show.html.erb
+++ b/app/views/models/show.html.erb
@@ -21,12 +21,6 @@
           </div>
         </div>
         <div class="form-group">
-          <label class="col-sm-3 control-label"><%= ara_t 'model.localized_name' %></label>
-          <div class="col-sm-6">
-            <%= text_field_tag nil, @model.localized_name, readonly: true, class: 'form-control' %>
-          </div>
-        </div>
-        <div class="form-group">
           <label class="col-sm-3 control-label"><%= ara_t 'model.name' %></label>
           <div class="col-sm-6">
             <%= text_field_tag nil, @model.name, readonly: true, class: 'form-control' %>
@@ -79,7 +73,6 @@
             <tr>
               <th><%= ara_t 'submodel.code' %></th>
               <th><%= ara_t 'submodel.name' %></th>
-              <th><%= ara_t 'submodel.localized_name' %></th>
               <th></th>
             </tr>
           </thead>
@@ -88,7 +81,6 @@
             <tr>
               <td><%= submodel.code %></td>
               <td><%= submodel.name %></td>
-              <td><%= submodel.localized_name %></td>
               <td class="actions">
                 <%= link_to raw('<i class="fa fa-pencil"></i>'), edit_submodel_path(submodel), class: 'btn btn-default btn-icon' %>
                 <%= link_to raw('<i class="fa fa-times"></i>'), submodel, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-default btn-icon' %>
@@ -269,7 +261,7 @@
             <tr>
               <th><%= ara_t 'property.type' %></th>
               <th><%= ara_t 'property.code' %></th>
-              <th><%= ara_t 'property.i18n_name' %></th>
+              <th><%= ara_t 'property.name' %></th>
               <th><%= ara_t 'property.common_validation' %></th>
               <th><%= ara_t 'property.validations' %></th>
               <th></th>
@@ -280,7 +272,7 @@
             <tr>
               <td><%= property.model_name.human %><br /><%= property.type_text %></td>
               <td><%= property.code %><br />#<%= property.position %></td>
-              <td><%= property.localized_name %><br /><%= property.name %></td>
+              <td><%= property.name %></td>
               <td>
                 <% case property.common_validation.empty_tolerance %>
                 <% when 'not_allowed' %>
