--- a/app/views/namespaces/new.html.erb
+++ b/app/views/namespaces/new.html.erb
@@ -1,6 +1,6 @@
 <div class="app-heading app-heading-bordered app-heading-page">
   <div class="title">
-    <h1>Models</h1>
+    <h1>Namespaces</h1>
     <p><%= @page_metadata %></p>
   </div>
 </div>
@@ -14,6 +14,12 @@
         </div>
       </div>
       <div class="block-content">
+        <div class="form-group">
+          <label class="col-sm-3 control-label"><%= ara_t 'namespace.authenticator' %> <span class="required">*</span></label>
+          <div class="col-sm-6">
+            <%= f.collection_select :authenticator_id, @current_project.models.select{ |model| model.authenticatable.present? }, :id, :name, {}, class: 'form-control s2-select' %>
+          </div>
+        </div>
         <div class="form-group">
           <label class="col-sm-3 control-label"><%= ara_t 'namespace.name' %> <span class="required">*</span></label>
           <div class="col-sm-6">
