--- a/app/views/retrieve_collections/show.html.erb
+++ b/app/views/retrieve_collections/show.html.erb
@@ -27,9 +27,9 @@
           </div>
         </div>
         <div class="form-group">
-          <label class="col-sm-3 control-label"><%= ara_t 'retrieve_collection.action_name' %></label>
+          <label class="col-sm-3 control-label"><%= ara_t 'retrieve_collection.action_code' %></label>
           <div class="col-sm-6">
-            <%= text_field_tag nil, @retrieve_collection.action_name, readonly: true, class: 'form-control' %>
+            <%= text_field_tag nil, @retrieve_collection.action_code, readonly: true, class: 'form-control' %>
           </div>
         </div>
       </div>
