--- a/app/views/source_codes/index.html.erb
+++ b/app/views/source_codes/index.html.erb
@@ -5,6 +5,7 @@
   </div>
 </div>
 <div class="container">
+  <%= styled_flash %>
   <div class="block block-condensed">
     <div class="app-heading">
       <div class="title">
@@ -16,16 +17,16 @@
       <table class="table table-head-light margin-bottom-0">
         <thead>
           <tr>
-            <th><%= ara_t 'source_code.type' %></th>
-            <th><%= ara_t 'source_code.file_name' %></th>
+            <th><%= ara_t 'source_code.prefix' %></th>
+            <th><%= ara_t 'source_code.file_name_with_extension' %></th>
             <th></th>
           </tr>
         </thead>
         <tbody>
           <% @source_codes.each do |source_code| %>
           <tr>
-            <td><%= source_code.type %></td>
-            <td><%= source_code.file_name %></td>
+            <td><%= source_code.prefix.join(File::SEPARATOR) %></td>
+            <td><%= source_code.file_name %>.<%= source_code.extension %></td>
             <td class="actions">
               <%= link_to raw('<i class="fa fa-file-text-o"></i>'), source_code, class: 'btn btn-default btn-icon' %>
             </td>
