--- a/app/views/namespaces/show.html.erb
+++ b/app/views/namespaces/show.html.erb
@@ -71,8 +71,7 @@
           <tr>
             <td><%= navigation.name %></td>
             <td class="actions">
-              <%= link_to raw('<i class="fa fa-pencil"></i>'), edit_navigation_path(navigation), class: 'btn btn-default btn-icon' %>
-              <%= link_to raw('<i class="fa fa-times"></i>'), navigation, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-default btn-icon' %>
+              <%= link_to raw('<i class="fa fa-file-text-o"></i>'), navigation, class: 'btn btn-default btn-icon' %>
             </td>
           </tr>
           <% end %>
