--- a/app/views/navigations/edit.html.erb
+++ b/app/views/navigations/edit.html.erb
@@ -26,10 +26,16 @@
             <%= f.text_field :name, class: 'form-control' %>
           </div>
         </div>
+        <div class="form-group">
+          <label class="col-sm-3 control-label"><%= ara_t 'navigation.linear_icon' %> <span class="required">*</span></label>
+          <div class="col-sm-6">
+            <%= f.text_field :linear_icon, class: 'form-control' %>
+          </div>
+        </div>
       </div>
       <div class="block-footer">
         <%= f.submit 'Update', class: 'btn btn-primary' %>
-        <%= link_to 'Return', @navigation.namespace, class: 'pull-right btn btn-default' %>
+        <%= link_to 'Return', @navigation, class: 'pull-right btn btn-default' %>
       </div>
     </div>
   <% end %>
