--- a/app/views/navigations/new.html.erb
+++ b/app/views/navigations/new.html.erb
@@ -26,6 +26,12 @@
             <%= f.text_field :name, class: 'form-control' %>
           </div>
         </div>
+        <div class="form-group">
+          <label class="col-sm-3 control-label"><%= ara_t 'navigation.linear_icon' %> <span class="required">*</span></label>
+          <div class="col-sm-6">
+            <%= f.text_field :linear_icon, class: 'form-control' %>
+          </div>
+        </div>
       </div>
       <div class="block-footer">
         <%= f.submit 'Create', class: 'btn btn-primary' %>
