--- a/app/views/navigations/show.html.erb
+++ b/app/views/navigations/show.html.erb
@@ -26,6 +26,12 @@
             <%= text_field_tag nil, @navigation.name, readonly: true, class: 'form-control' %>
           </div>
         </div>
+        <div class="form-group">
+          <label class="col-sm-3 control-label"><%= ara_t 'namespace.linear_icon' %></label>
+          <div class="col-sm-6">
+            <%= text_field_tag nil, @navigation.linear_icon, readonly: true, class: 'form-control' %>
+          </div>
+        </div>
       </div>
       <div class="block-footer">
         <%= link_to 'Edit', edit_navigation_path(@navigation), class: 'btn btn-default' %>
